# Alx_DjangoLearnLab

0x1.Introduction_ to_ Django/: pyproject.toml
0x1.Introduction_ to_ Django/LibraryProject/: README.md  db.sqlite3  pyproject.toml
0x1.Introduction_ to_ Django/LibraryProject/LibraryProject/: README.md  settings.py
0x1.Introduction_ to_ Django/LibraryProject/bookshelf/: CRUD.md  admin.py  create.md  delete.md  models.py  retrieve.md  update.md
0x1.Introduction_ to_ Django/LibraryProject/bookshelf/migrations/: 0001_initial.py
