[tool.poetry]
name = "0x1-introduction- to- django"
version = "0.1.0"
description = ""
authors = ["coderhanzo <bielertw@icloud.com>"]
readme = "README.md"
packages = [{include = "0x1"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
mysql-connector-python = "^9.0.0"
mysql = "^0.0.3"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
